# geant4_gazebo_sim

./: .gitignore  LICENSE  README.md  run_geant4_embed.sh  step03_bridge.sh  step03_gz_run.sh
params/: robot_measure.yaml
src/g4_bringup/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/g4_bringup/g4_bringup/: __init__.py  measurement_sweep.py  measurement_sweep_edep.py  robot_measurement_node.py  source_spawner_node.py
src/g4_bringup/launch/: demo_all.launch.py  measurement_bringup.launch.py
src/g4_bringup/models/: cs137_sphere.sdf
src/g4_bringup/resource/: g4_bringup
src/g4_bringup/robots/: diffbot.sdf
src/g4_bringup/scripts/: shield_sweep.py
src/g4_bringup/worlds/: minimal.sdf  world_demo.sdf  world_demo.world.sdf
src/g4_interfaces/: CMakeLists.txt  package.xml
src/g4_interfaces/msg/: ControlEvent.msg  MeasurementRequest.msg  MeasurementResult.msg
src/g4_interfaces/srv/: Control.srv  Measurement.srv
src/g4_mapper/: package.xml  setup.cfg  setup.py
src/g4_mapper/g4_mapper/: occupancy_mapper.py
src/g4_mapper/launch/: occupancy_mapper.launch.py  occupancy_with_rviz.launch.py
src/g4_mapper/rviz/: edep_grid.rviz
src/g4_viz/: package.xml  setup.cfg  setup.py
src/g4_viz/g4_viz/: __init__.py  control_node.py  edep_common.py  edep_grid_node.py  edep_hist_node.py  edep_plotter_node.py
src/g4_viz/launch/: edep_grid.launch.py  edep_hist.launch.py  edep_plotter.launch.py
src/g4_viz/resource/: g4_viz
src/geant4_embed/: CMakeLists.txt  package.xml
src/geant4_embed/src/: main.cpp  odom_subscriber.cpp  odom_subscriber.hpp  sim_shared.cpp  sim_shared.hpp  sim_shared_multi.cpp  sim_shared_multi.hpp
src/geant4_embed/src/geant4/: ActionInitialization.cc  ActionInitialization.hh  DetectorConstruction.cc  DetectorConstruction.hh  EventAction.cc  EventAction.hh  Measurement.cpp  Measurement.hpp  PrimaryGeneratorAction.cc  PrimaryGeneratorAction.hh
