<?xml version="1.0"?>
<package format="3">
  <name>g4_bringup</name>
  <version>0.0.1</version>
  <description>Gazebo × ros_gz × Geant4 × 可視化ノードの統合起動用 bringup パッケージ</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- ament_python を使う -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Launch まわり -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- 連携先パッケージ -->
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>geant4_embed</exec_depend>
  <exec_depend>g4_viz</exec_depend>

  <!-- あると便利（use_sim_time 等）-->
  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
