<?xml version="1.0"?>
<package format="3">
  <name>g4_bringup</name>
  <version>0.0.1</version>
  <description>Gazebo × ros_gz × Geant4 × 可視化ノードの統合起動用 bringup パッケージ</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>geant4_embed</exec_depend>
  <exec_depend>g4_viz</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <!-- Dependencies for robot_measurement_node -->
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rclpy</build_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

