<?xml version="1.0"?>
<package format="3">
  <name>g4_interfaces</name>
  <version>0.0.2</version>
  <description>Common interfaces (srv/msg) for Gazebo×Geant4 project</description>
  <maintainer email="you@example.com">g4</maintainer>
  <license>Apache-2.0</license>

  <!-- build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- generate -->
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>builtin_interfaces</build_depend>

  <!-- runtime (★ 型サポートを明示) -->
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rosidl_typesupport_c</exec_depend>
  <exec_depend>rosidl_typesupport_cpp</exec_depend>

  <!-- ★ interface package の宣言 -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
