<?xml version="1.0"?>
<package format="3">
  <name>g4_mapper</name>
  <version>0.1.0</version>
  <description>Geant4×Gazebo: /odom と /g4/edep から 2D ヒートマップ(OccupancyGrid)を生成</description>

  <maintainer email="you@example.com">g4_mapper_maintainer</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
